Issue #GEN-141: Fixed issue with spacing in grid fourths

--- a/web/themes/custom/genlyd_aarhus/source/_patterns/00-elements/forms/fieldset.scss
+++ b/web/themes/custom/genlyd_aarhus/source/_patterns/00-elements/forms/fieldset.scss
@@ -5,6 +5,5 @@
 
   legend {
     font-weight: 600;
-    margin-bottom: $spacing-pixel-small;
   }
 }
